fix Task overflow

--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -13,8 +13,6 @@
   /* adding a third auto makes the end of the line move back left */
 
   text-overflow: ellipsis;
-  overflow: hidden;
-  max-width: 72vw;
 }
 
 .task__dots {
